# stag_ros

./: .gitmodules  CMakeLists.txt  README.md  package.xml  stag_ros.xml
launch/: example.launch
msg/: StagMarker.msg  StagMarkers.msg
nodes/: StagNodelet.cpp  StagNodelet.h  stagNode.cpp  stagNodelet.cpp
param/: example_marker_bundles.yaml  example_marker_sizes_by_id.yaml
src/: Decoder.cpp  Drawer.cpp  EDInterface.cpp  EDInterface.h  Marker.cpp  Marker.h  PoseRefiner.cpp  PoseRefiner.h  QuadDetector.cpp  Stag.cpp  Stag.h  main.cpp
src/ED/: ED.cpp  EDLines.cpp  Timer.h  Utilities.cpp
srv/: SetTrackedBundles.srv
