<?xml version="1.0"?>
<package format="2">
  <name>stag_ros</name>
  <version>0.0.1</version>
  <description>Low-level control for the motors of the BlueROV 2. 
    Lightweight package without AR-tag reading that can be combined
      with other packages to produce a complete control system.
  </description>
  <maintainer email="samuel.e.lensgraf.GR@dartmouth.edu">Sam Lensgraf</maintainer>
  <license>MIT</license>

  <author email="samuel.e.lensgraf.GR@dartmouth.edu">Sam Lensgraf</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend> 
  <exec_depend>nodelet</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <export>
    <nodelet plugin="${prefix}/stag_ros.xml"/>
  </export>
</package>


